...
                    shape = MaterialTheme.shapes.medium,
                ) {
                    Text("Clear")
                }
                if (purpose == TaskFilterBuilderPurpose.FILTER) {
                    TextButton(onClick = { showNameDialog = true }, shape = MaterialTheme.shapes.medium) {
                        Text("Save")
                    }
                    Button(
                        onClick = { onApply?.invoke(state) },
                        shape = MaterialTheme.shapes.medium,
                    ) {
                        Text("Apply")
...
